JAVA8语法兼容